[project]
name = "pxm-tools"
version = "0.1.0"
description = "A collection of tools to interact with Proxmox API."
readme = "README.md"
authors = [
    { name = "Leonardo Almeida", email = "leonardoalmeida7777@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
